Updated with some comments

--- a/ACH_HIGHSCORE_100.html
+++ b/ACH_HIGHSCORE_100.html
@@ -1,9 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#">
   <head>
     <meta property="og:type" content="game.achievement"/>
+    
+    <!-- URL to app's link on app store -->
     <meta property="og:url" content="https://rollover-achievements.firebaseapp.com/expert_roller.html"/>
-    <meta property="og:title" content="Expert Roller"/>
-    <meta property="og:description" content="Reached 100 points on RollOver!"/>
+    
+    <meta property="og:title" content="HIGHSCORE 100!"/>
+    <meta property="og:description" content="Reached 100 points on Skiddy Cliff! Think you can beat my highscore?"/>
     <meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/project_modules/disp/05ec291274689.5676137b90d31.jpg"/>
     <meta property="game:points" content="100"/>
     <meta property="fb:app_id" content="1974610932857145"/>
@@ -11,12 +14,7 @@
 
   <body>
 
-    An expert roller indeed!
-
-    <!-- Redirect users to game -->
-    <!-- <script type="text/javascript">
-      window.location.href = ""
-    </script> -->
+    Achievement: Highscore 100!
 
   </body>
 
