Changed image URL for achievement highscore 100

--- a/ACH_HIGHSCORE_100.html
+++ b/ACH_HIGHSCORE_100.html
@@ -7,7 +7,7 @@
     
     <meta property="og:title" content="HIGHSCORE 100!"/>
     <meta property="og:description" content="Reached 100 points on Skiddy Cliff! Think you can beat my highscore?"/>
-    <meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/project_modules/disp/05ec291274689.5676137b90d31.jpg"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/NatashaKSS/skiddycliff-website/master/Achievement%20100HS.png"/>
     <meta property="game:points" content="100"/>
     <meta property="fb:app_id" content="1974610932857145"/>
   </head>
