Added bitly url instead in og:url

--- a/ACH_HIGHSCORE_100.html
+++ b/ACH_HIGHSCORE_100.html
@@ -3,7 +3,7 @@
     <meta property="og:type" content="game.achievement"/>
     
     <!-- URL to this page where Facebook will scrape the meta tags from -->
-    <meta property="og:url" content="https://natashakss.github.io/skiddycliff-website/ACH_HIGHSCORE_100.html"/>
+    <meta property="og:url" content="https://bit.ly/achievement_highscore_100"/>
     
     <meta property="og:title" content="HIGHSCORE 100!"/>
     <meta property="og:description" content="Reached 100 points on Skiddy Cliff! Think you can beat my highscore?"/>
