--- a/SHARE_HOME.html
+++ b/SHARE_HOME.html
@@ -3,7 +3,7 @@
     <meta property="og:type" content="game.achievement"/>
     
     <!-- URL to this page where Facebook will scrape the meta tags from -->
-    <meta property="og:url" content="https://rebrand.ly/achievement_death_50"/>
+    <meta property="og:url" content="https://rebrand.ly/share_home"/>
     
     <meta property="og:title" content="I'm playing Skiddy Cliff, join me today! 🐦 #skiddycliff"/>
     <meta property="og:description" content="Download Skiddy Cliff & join me today! "/>
