--- a/SHARE_GAMEOVER.html
+++ b/SHARE_GAMEOVER.html
@@ -13,15 +13,13 @@
   </head>
 
   <body>
-a
+
     Generic: Game Over! 
     
     <!-- Redirect users to game, e.g. app store link -->
-    <!-- 
     <script type="text/javascript">
-      window.location.href = ""
+      window.location.href = "http://onelink.to/skiddycliff";
     </script>
-    -->
 
   </body>
 
